--- a/force-app/Exercises/main/default/classes/CourseDeliveryLocations.cls
+++ b/force-app/Exercises/main/default/classes/CourseDeliveryLocations.cls
@@ -6,4 +6,14 @@ public with sharing class CourseDeliveryLocations{
 		        FROM Course_Delivery__c
 		        group by City__c, Country__c];
 	}
+
+	public List<AggregateResult> locationsVF{
+		get{
+			if (locationsVF == null){
+				locationsVF = CourseDeliveryLocations.getLocations();
+			}
+			return locationsVF;
+		}
+		private set;
+	}
 }
